syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1770
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarWearFlycloakRsp {
	int32 retcode = 13;
	uint64 avatar_guid = 8;
	uint32 flycloak_id = 2;
}
